--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,12 @@
     <string name="passwordinit2">Nueva contraseña</string>
     <string name="passwordcomfirm3">Confirme contraseña</string>
     <string name="botonConfirmar">CAMBIAR CONTRASEÑA</string>
+    <string name="time">4:00</string>
+    <string name="am">A.M.</string>
+    <string name="diario">diario</string>
+    <string name="enableAlarm">Activar</string>
+    <string name="lista_de_al">Lista de Alarmas</string>
+    <string name="label">ACTIVIDAD\nNOCTURNA</string>
+    <string name="label1">RITMO\nCIRCADIANO</string>
+    <string name="body">¿Tipo de reporte?</string>
 </resources>
